# openFrameworks-Cmake-Wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODOS.md  install.sh
cmake/: openFrameworksConfig.cmake.in
openFrameworks_addon_scripts/addons/: CMakeList.txt.template  ofxHTTPSettings.cmake  ofxIOSettings.cmake  ofxJSONSettings.cmake  ofxMSATimer.cmake  ofxMediaTypeSettings.cmake  ofxNetworkUtilsSettings.cmake  ofxTaskQueueSettings.cmake  ofxUnitTestsSettings.cmake  ofxXMPPSettings.cmake
openFrameworks_addon_scripts/addons/ofxAnimatable/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxAssimpModelLoader/: CMakeLists.txt  ofxAssimpModelLoader.cmake
openFrameworks_addon_scripts/addons/ofxAudioFile/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxAutoReloadedShader/: CMakeLists.txt  ofxAutoReloadedShader.cmake
openFrameworks_addon_scripts/addons/ofxCv/: CMakeLists.txt  ofxCv.cmake
openFrameworks_addon_scripts/addons/ofxDeferredShading/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxFX/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxFft/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxGLFog/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxGui/: CMakeLists.txt  ofxGui.cmake
openFrameworks_addon_scripts/addons/ofxHoa/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxKinect/: CMakeLists.txt  ofxKinect.cmake
openFrameworks_addon_scripts/addons/ofxMSAOpenCL/: CMakeLists.txt  ofxMSAOpenCL.cmake
openFrameworks_addon_scripts/addons/ofxMSAPingPong/: CMakeLists.txt  ofxMSAPingPong.cmake
openFrameworks_addon_scripts/addons/ofxMidi/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxOpenCv/: .CMakeLists.txt.swp  CMakeLists.txt  ofxOpenCv.cmake
openFrameworks_addon_scripts/addons/ofxOpenVR/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxOsc/: CMakeLists.txt  ofxOsc.cmake  ofxOscSettings.cmake
openFrameworks_addon_scripts/addons/ofxPBR/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxPDSP/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxPointInMesh/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxPostProcessing/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxSoundObjects/: CMakeLists.txt
openFrameworks_addon_scripts/addons/ofxThreadedImageLoader/: CMakeLists.txt  ofxThreadedImageLoader.cmake
openFrameworks_addon_scripts/addons/ofxXmlSettings/: CMakeLists.txt  ofxXmlSettings.cmake
scripts/: clone_addons.sh  link_ofaddon_cmake_scripts.sh
